--- a/public/static/css/styles.css
+++ b/public/static/css/styles.css
@@ -93,3 +93,13 @@ section{
 .content#proj7:hover{
     background-position: -1255px -200px;
 }
+
+.btn-circle {
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  padding: 6px 0;
+  font-size: 12px;
+  line-height: 1.428571429;
+  border-radius: 15px;
+}
