--- a/public/static/views/portfolio/index.html
+++ b/public/static/views/portfolio/index.html
@@ -1,7 +1,7 @@
 <!--<div class="row no-gutter">-->
 <div class="row gutter-80">
     <div class="col-xs-6 col-md-4 col-lg-3 gutter-80" ng-repeat="project in projects">
-        <a href="#/p/{{project.name}}" class="portfolio-box">
+        <a href="/#/projects/{{project.name}}" class="portfolio-box">
             <img src="thumbnails/{{project.name}}.png" class="img-responsive" alt="" id="{{project.name}}">
             <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
