--- a/public/static/views/portfolio/index.html
+++ b/public/static/views/portfolio/index.html
@@ -2,13 +2,13 @@
 <div class="row gutter-80">
     <div class="col-xs-6 col-md-4 col-lg-3 gutter-80" ng-repeat="project in projects">
         <a href="/#/projects/{{project.name}}" class="portfolio-box">
-            <img src="thumbnails/{{project.name}}.png" class="img-responsive" alt="" id="{{project.name}}">
+            <img src="/thumbnails/{{project.name}}.png" class="img-responsive" alt="" id="{{project.name}}">
             <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                     <div class="project-category text-faded">
                         {{project.title}}
                     </div>
-                    <!--<div class="project-name">{{project.title}}</div>-->
+                      <!--<div class="project-name">{{project.title}}</div>-->
                 </div>
             </div>
         </a>
