--- a/public/static/views/project/index.html
+++ b/public/static/views/project/index.html
@@ -2,7 +2,7 @@
 <h4>{{project.title}}</h4>
   <div class="row">
     <div class="col-sm-3">
-        <a href="#details" data-toggle="collapse">Click Me</a>
+        <a href="/#/details" data-toggle="collapse">Click Me</a>
         <div id="details" class="collapse in">
             <p>Category: {{project.category}}</p>
             <p>Location: {{project.address}} - {{project.city}} - {{project.country}}</p>
