--- a/public/static/views/project/index.html
+++ b/public/static/views/project/index.html
@@ -1,20 +1,20 @@
 <div class="container-fluid">
 <h4>{{project.title}}</h4>
   <div class="row">
-    <div class="col-sm-3">
-        <a href="/#/details" data-toggle="collapse">Click Me</a>
+    <div class="col-sm-3" style="text-align:justify">
+        <!--<a href="/#/details" data-toggle="collapse">Click Me</a>-->
         <div id="details" class="collapse in">
-            <p>Category: {{project.category}}</p>
-            <p>Location: {{project.address}} - {{project.city}} - {{project.country}}</p>
-            <p>Date: {{project.startYear}} - {{project.endYear}}</p>
-            <p>Gross area: {{project.grossArea}}</p>
-            <p>Floor area: {{project.floorArea}}</p>
-            <p>Description: {{project.description}}</p>
-            <p>Company: <a href="{{project.companyUrl}}">{{project.company}}</a></p>
-            <p>Participation: {{project.participation}}</p>
+            <p><b>Category</b><br>{{project.category}}</p>
+            <p><b>Location</b><br>{{project.address}} - {{project.city}} - {{project.country}}</p>
+            <p><b>Date</b><br>{{project.startYear}} - {{project.endYear}}</p>
+            <p><b>Gross area</b><br>{{project.grossArea}}</p>
+            <p><b>Floor area</b><br>{{project.floorArea}}</p>
+            <p><b>Description</b><br>{{project.description}}</p>
+            <p><b>Company</b><br><a href="{{project.companyUrl}}">{{project.company}}</a></p>
+            <p><b>Participation</b><br>{{project.participation}}</p>
         </div>
     </div>
-    <div class="col-sm-1" style="border-left:1px solid black"></div>
+    <!--<div class="col-sm-1" style="border-left:1px solid black"></div>-->
     <div class="col-sm-7">
         <div class="row">
             <div class="col-xs-12" ng-repeat="image in project.images">
