Fixed navbar. Navigation and navbar layout corrections

--- a/public/static/css/color-pallete.css
+++ b/public/static/css/color-pallete.css
@@ -67,3 +67,40 @@
 .color-complement-2 { color: #D4B56A }
 .color-complement-3 { color: #806015 }
 .color-complement-4 { color: #594005 }*/
+
+
+/*Color Seeds*/
+/*.color-primary-0 { color: #433413 }
+.color-primary-1 { color: #907878 }
+.color-primary-2 { color: #c6baba }
+.color-primary-3 { color: #ffccbb }
+.color-primary-4 { color: #f87956 }
+
+.color-primary-0 { color: #D4BFAC }
+.color-primary-1 { color: #F4F8ED }
+.color-primary-2 { color: #E6E0D6 }
+.color-primary-3 { color: #8E766A }
+.color-primary-4 { color: #4C4650 }
+.color-primary-5 { color: #C0D8DA }
+
+.color-primary-0 { color: #CECEC2 }
+.color-primary-1 { color: #534E4E }
+.color-primary-2 { color: #284046 }
+.color-primary-3 { color: #315C5D }
+.color-primary-4 { color: #4E8883 }
+.color-primary-5 { color: #68B1AD }
+
+.color-primary-0 { color: #D5D0D9 }
+.color-primary-1 { color: #BBA8BD }
+.color-primary-2 { color: #63435C }
+.color-primary-3 { color: #2F1420 }
+.color-primary-4 { color: #1D2218 }
+.color-primary-5 { color: #66585A }
+
+.color-primary-0 { color: # }
+.color-primary-1 { color: # }
+.color-primary-2 { color: # }
+.color-primary-3 { color: # }
+.color-primary-4 { color: # }
+.color-primary-5 { color: # }*/
+
