--- a/public/static/css/styles.css
+++ b/public/static/css/styles.css
@@ -1,8 +1,5 @@
-/* my_display: 1245px */
-/* target / context(=1245) = result */
-
-/*declare variables*/
-:root{
+/* ******** VARIABLES DECLARATION ******** */
+:root {
   --main-bg-color:  #F3F6FC;
   /*--sec-bg-color: #27526B;*/
   --sec-bg-color: #E1E5E5;
@@ -14,57 +11,106 @@
   --footer-font-color: #6C797B;
   --link-bg-color: rgba(240,95,64,.9);
   --link-color: #eb3812;
+
+  --drawer-width: 450px;
+  --drawer-width-neg: -450px;
 }
 
-html,
-body{
-    width: 100%;
-    height: 100%;
-    width: 100%;
-    height: 100%;
-    margin: 0 auto;
-    padding: 0;
+* {
+	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    margin: 0;
+	padding: 0;
+}
 
+html {
+    /*height: 100%;*/
+}
+
+body {
     background-color: var(--main-bg-color);
     color: var(--main-font-color);
-    
     font-family: "Quicksand", sans-serif;
-    font-weight: 400;
-    text-align: center;
-    
-    /*line-height: 1.45;
-    -webkit-font-smoothing: antialiased;
-    text-rendering: optimizeLegibility;*/
+	font-size: 16px;
+    height: auto;
 }
 
-a {
-    color: #f05f40;
-    /*-webkit-transition: all .35s;
-    -moz-transition: all .35s;
-    transition: all .35s;*/
+/* ********************************************** */
+/* ******************* NAVBAR ******************* */
+/* ********************************************** */
+.navbar-default {
+	background-color: #E1E5E5;
 }
 
-a:hover,
-a:focus {
-    color: var(--link-color);
-}
-
-p {
-    margin-bottom: 20px;
-    font-size: 16px;
-    line-height: 1.5;
-}
-
-section {
-    padding: 100px 0;
-}
-
-aside {
-    padding: 50px 0;
-}
-
-.no-padding {
+.navbar .navbar-brand h1{
     padding: 0;
+    line-height: 14px;
+}
+
+.navbar .nav {
+    padding: 0;
+    margin: 0 -15px;
+}
+
+@media(min-width:768px) {
+    body {
+        padding-top: 140px; 
+    }
+    
+   .navbar .navbar-brand h1{
+        padding: 15px 0;
+    }
+
+    .navbar .nav {
+        padding: 15px 0;
+    }
+    
+    .navbar .nav > li {
+        margin: -15px 0;
+    }
+    .navbar .nav > li > a {
+        padding: 30px 15px;
+    }
+}
+
+.navbar-default .nav > li > a:hover, 
+.navbar-default .nav > li > a:focus {
+	background-color: rgba(240,95,64,.9);
+	color: #F3F6FC;
+}
+
+.navbar .navbar-brand h1 {
+	margin: 0;
+	color: rgb(119,119,119);
+}
+
+/* ********************************************** */
+/* ******************** MAIN ******************** */
+/* ********************************************** */
+main {
+    min-height: calc(100% - 30px);
+    height: auto;
+    z-index: 9999;
+    /*margin-top: -86px;*/
+    /*margin-bottom: -86px;*/
+    /*margin: 0 auto -106px;*/
+}
+
+/* ********************************************** */
+/* ******************* FOOTER ******************* */
+/* ********************************************** */
+footer {
+    background-color: var(--footer-bg-color);
+    color: var(--footer-font-color);
+    text-align: center;
+    width: 100%;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    /*height: 64px;*/
+    /*margin-top: 20px;*/
+    margin-bottom: 0;
 }
 
 /* ********************************************** */
@@ -145,44 +191,110 @@ aside {
     padding-left: 0;
 }
 
+
 /* ********************************************** */
-/* ******************* NAVBAR ******************* */
+/* ******************* DRAWER ******************* */
 /* ********************************************** */
-.navbar,
-.about,
-.contact{
-   padding: 2%;
+section#sec-project {
+    /*padding: 100px 0;*/
+    float: left;
 }
 
-.navbar,
-.about{
-   background-color: var(--sec-bg-color);
-   color: var(--main-font-color);
-}
-.contact{
-   background-color: var(--main-bg-color);
-   color: var(--main-font-color);
+/* Hides the checkbox. The label will be styled instead */
+#drawer-toggle {
+  position: absolute;
+  opacity: 0;
 }
 
-.container{
-    margin: 0 auto;
-    width: 50%;
-    text-align: justify;
-    padding-bottom: 60px;
+#drawer-toggle-label {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  left: 0px;
+  top: 100px;
+  height: 50px;
+  width: 50px;
+  display: block;
+  position: fixed;
+  background: rgba(255, 255, 255, .0);
+  z-index: 1;
 }
 
-h4 {
-    margin-bottom: 40px;
-    padding-bottom: 25px;
-    /*border-bottom: 1px solid #6C797B;*/
-    text-align: center;
+/* Adds the "hamburger" menu icon with box-shadow */
+#drawer-toggle-label:before {
+  content: '';
+  display: block;
+  position: absolute;
+  height: 2px;
+  width: 24px;
+  background: #8d8d8d;
+  left: 13px;
+  top: 18px;
+  box-shadow: 0 6px 0 #8d8d8d, 0 12px 0 #8d8d8d;
 }
 
-/*.about{
-    margin-bottom: 50px;
+/*header {
+  width: 100%;
+  position: fixed;
+  left: 0px;
+  background: #efefef;
+  padding: 10px 10px 10px 50px;
+  font-size: 30px;
+  line-height: 30px;
+  z-index: 0;
 }*/
 
-.contact-form{
+/* drawer menu pane - note the 0px width */
+#drawer {
+  position: fixed;
+  top: 0;
+  left: var(--drawer-width-neg);
+  height: 100%;
+  width: var(--drawer-width);
+  background: #2f2f2f;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  padding: 20px;
+  -webkit-overflow-scrolling: touch;
+  text-align: justify;
+}
+
+/* actual page content pane */
+#page-content {
+  margin-left: 0px;
+  margin-top: 50px;
+  width: 100%;
+  height: calc(100% - 50px);
+  overflow-x: hidden;
+  /*overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;*/
+  padding: 20px;
+}
+
+/* checked styles (menu open state) */
+#drawer-toggle:checked ~ #drawer-toggle-label {
+  height: 100%;
+  width: calc(100% - var(--drawer-width));
+  background: rgba(255, 255, 255, .8);
+}
+#drawer-toggle:checked ~ #drawer-toggle-label,
+#drawer-toggle:checked ~ header {
+  left: var(--drawer-width);
+}
+#drawer-toggle:checked ~ #drawer {
+  left: 0px;
+}
+#drawer-toggle:checked ~ #page-content {
+  margin-left: var(--drawer-width);
+}
+
+/* ********************************************** */
+/* **************** CONTACT FORM **************** */
+/* ********************************************** */
+.contact-form {
     display: block;
     width: 100%;
     height: 34px;
@@ -193,54 +305,28 @@ h4 {
     color: var(--main-font-color);
 }
 .contact-form:hover,
-.contact-form:focus{
+.contact-form:focus {
     /*background-color: #403F34;*/
     background: rgba(210,95,64,.9);
     color: #E9E5E5;
 }
 
-textarea.contact-form{
+textarea.contact-form {
     height: 95px;
 }
 
-button.contact-form{
+button.contact-form {
     color: #E1E5E5;
     background-color: #403F34;
     width: 40%;
     margin: 0 auto;
 }
 button.contact-form:hover,
-button.contact-form:focus{
+button.contact-form:focus {
     color: #E1E5E5;
     background: rgba(210,95,64,.9);
 }
 
-/* #################### */
-/*.contact-form{
-    background-color: #E1E5E5;
-    color: #E1E5E5;
-}
-.contact-form:hover{
-    background-color: #6C797B;
-}
-button.contact-form{
-    color: #6C797B;
-}
-button.contact-form:hover,
-button.contact-form:focus{
-    color: #8CA6A9;
-}*/
-
-/* ********************************************** */
-/* ******************* FOOTER ******************* */
-/* ********************************************** */
-footer{
-    background-color: var(--footer-bg-color);
-    color: var(--footer-font-color);
-    
-    padding-top: 32px;
-    padding-bottom: 32px;
-}
 
 /* ********************************************** */
 /* ******* CHANGES IN BOOTSTRAP DEFAULTS ******** */
