--- a/public/static/css/styles.css
+++ b/public/static/css/styles.css
@@ -301,53 +301,80 @@ section#sec-project {
 /* ********************************************** */
 .about .container,
 .contact .container  {
-    width: 67%;
-    margin: 50px auto;
+    width: 95%;
+    margin: 10px auto;
     padding: 0;
     text-align: justify;
+    /*border: 1px solid green;*/
+}
+.contact .container  {
+    text-align: center;
 }
 
 @media(min-width:768px) {
-    .about .container,
-    .contact .container  {
+    .about .container  {
+        width: 67%;
         margin: 0 auto;
+    }
+
+    .contact .container  {
+        width: 40%;
+        margin: 0 auto;
+        text-align: center;
     }
 }
 
 /* ********************************************** */
 /* **************** CONTACT FORM **************** */
 /* ********************************************** */
+button, input, textarea {
+    font-family: "Quicksand", sans-serif;
+}
+
 .contact-form {
-    display: block;
-    width: 100%;
-    height: 34px;
-    padding: 6px 12px; 
-    background-color:var(--sec-bg-color);
     border: 1px solid var(--main-bg-color);
     border-radius: 4px;
-    color: var(--main-font-color);
+    background-color:var(--sec-bg-color);
+    color: rgb(119, 119, 119);
+    font-size: 16px;
+    text-align: center;
+    display: block;
 }
-.contact-form:hover,
-.contact-form:focus {
-    /*background-color: #403F34;*/
-    background: rgba(210,95,64,.9);
-    color: #E9E5E5;
+
+input.contact-form{
+    /*background-color:var(--sec-bg-color);*/
+    /*color: var(--main-font-color);*/
+    width: 100%;
+    height: 34px;
+    padding: 10px 5px;
+    margin-bottom: 10px; 
 }
 
 textarea.contact-form {
+    width: 100%;
     height: 95px;
+    padding: 10px 5px;
+    margin-bottom: 10px;
+} 
+
+.contact-form:hover,
+.contact-form:focus {
+    background-color: rgba(210,95,64,.9);
+    /*color: #E9E5E5;*/
+    /*background-color: var(--link-bg-color);*/
+    color: var(--link-font-color);
 }
 
 button.contact-form {
-    color: #E1E5E5;
-    background-color: #403F34;
     width: 40%;
+    padding: 5px 0;
     margin: 0 auto;
 }
+
 button.contact-form:hover,
 button.contact-form:focus {
-    color: #E1E5E5;
-    background: rgba(210,95,64,.9);
+    /*color: #E1E5E5;
+    background-color: rgba(210,95,64,.9);*/
 }
 
 /* ********************************************** */
