Removed pug templating - too much trouble to be working with angular. Structure and tools refactoring

--- a/delete/_nav.pug
+++ b/delete/_nav.pug
@@ -14,11 +14,14 @@ header(role='banner')
       .nav-main
         ul(id='collapsable-nav', class='nav navbar-nav navbar-right collapse navbar-collapse')
           li
-            a(href='/#/home' title='Home' data-toggle='collapse' data-target='.in'>Portfolio)
+            a(href='/#/home', title='Home', data-toggle='collapse', data-target='.in')
+              Portfolio
           li
-            a(href='/#/about' title='About' data-toggle='collapse' data-target='.in'>About)
+            a(href='/#/about', title='About', data-toggle='collapse', data-target='.in')
+              About
           li
-            a(href='/#/contacts' title='Contacts' data-toggle='collapse' data-target='.in'>Contacts)
+            a(href='/#/contacts', title='Contacts', data-toggle='collapse', data-target='.in')
+              Contacts
           //- Making menu collapse after click (requires changes in the body padding-top :
           //- li
           //-   a(href='/#/home' title='Home' data-toggle='collapse' data-target='#collapsable-nav'>Portfolio)
