--- a/delete/about.pug
+++ b/delete/about.pug
@@ -1,4 +1,4 @@
-section(class="about")
+section(class='about')
   .container
     p
       | eu siu totó Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores dolorum eius libero nihil. Fugiat ipsum officia reprehenderit rerum saepe. Assumenda distinctio, voluptatibus. At consectetur cumque enim error laudantium mollitia obcaecati!
