--- a/public/templates/contacts.html
+++ b/public/templates/contacts.html
@@ -1,5 +1,5 @@
-<section class="contact">
-  <div class="container" ng-controller="ContactsController">
+<section id="contacts">
+  <div class="container">
     <form name="contactForm" ng-submit="submit()" novalidate>
       <fieldset>
         <input type="text" class="contact-form" name="name" ng-model="name" placeholder="NAME" required 
