--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -4,16 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--<base href="/"/>-->
     <title>LuGo</title>
+    <!--<base href="/">-->
 
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon"/>
-    <!--<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">-->
-    <!-- <link rel="stylesheet" href="/bootstrap/css/bootstrap.css"> -->
-    <!-- <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css"> -->
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css">-->
     <!-- <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'> -->
-    <!-- <link rel="stylesheet" href="static/css/styles.css"> -->
+     <!--<link rel="stylesheet" href="static/css/styles.css"> -->
     
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -21,25 +18,20 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <style>section {border:1px solid; margin-bottom:10px;} </style>
   </head>
   <body ng-app="architectureportfolio">
     <ng-include src="'partials/navbar.html'"></ng-include>
 
-    <main id="content" role="main"">
-      <div ng-view></div> 
+    <main id="content" role="main">
+      <!--<ui-view></ui-view>-->
+      <ng-view></ng-view>
     </main>
     
-    <ng-include src="'partials/footer.html'"></ng-include>
+    <!--<ng-include src="'partials/footer.html'"></ng-include>-->
     
-    <!-- Bootstrap resources -->
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>-->
-    <!-- <script src="jquery.min.js"></script>
-    <script src="bootstrap/js/bootstrap.min.js"></script> -->
-
     <script src="static/js/vendor.bundle.js"></script>
-    <script src="static/js/portfolio.bundle.js"></script>
-      
+    <script src="static/js/ngapp.bundle.js"></script>
 
   </body>
 </html>
