--- a/public/templates/partials/navbar.html
+++ b/public/templates/partials/navbar.html
@@ -1,26 +1,26 @@
 <!--<header role="banner">-->
-  <nav id="header-nav" class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
-        <span class="sr-only"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="/#/home" title="Home"><h1>Luísa Gonçalves</h1></a>
-    </div>
-    <div id="nav-main">
-      <ul id="collapsable-nav" class="nav navbar-nav navbar-right collapse navbar-collapse">
-      <li><a href="/#/home" title="Home" data-toggle="collapse" data-target=".in">Portfolio</a></li>
-      <li><a href="/#/about" title="About" data-toggle="collapse" data-target=".in">About</a></li>
-      <li><a href="/#/contacts" title="Contacts" data-toggle="collapse" data-target=".in">Contacts</a></li>
-      <!--Making menu collapse after click (requires changes in the body padding-top : -->
-      <!--<li><a href="/#/home" title="Home" data-toggle="collapse" data-target="#collapsable-nav">Portfolio</a></li>
-      <li><a href="/#/about" title="About" data-toggle="collapse" data-target="#collapsable-nav">About</a></li>
-      <li><a href="/#/contacts" title="Contacts" data-toggle="collapse" data-target="#collapsable-nav">Contacts</a></li>-->
-      </ul>
-    </div>
-    </div>
-  </nav>
-  <!--</header>-->
+<nav id="header-nav" class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <!--<div class="container-fluid">
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+      <span class="sr-only"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <a class="navbar-brand" href="/#/home" title="Home"><h1>Luísa Gonçalves</h1></a>
+  </div>-->
+  <div id="nav-main">
+    <ul id="collapsable-nav" class="nav navbar-nav navbar-right collapse navbar-collapse">
+      <!--<li><a ui-sref="home" title="Home" data-toggle="collapse" data-target=".in">Portfolio</a></li>
+      <li><a ui-sref="about" title="About" data-toggle="collapse" data-target=".in">About</a></li>
+      <li><a ui-sref="contacts" title="Contacts" data-toggle="collapse" data-target=".in">Contacts</a></li>
+      <li><a ui-sref="cms" title="CMS" data-toggle="collapse" data-target=".in">CMS</a></li>-->
+      <li><a href="/#!/home" title="Home" data-toggle="collapse" data-target=".in">Portfolio</a></li>
+      <li><a href="/#!/about" title="About" data-toggle="collapse" data-target=".in">About</a></li>
+      <li><a href="/#!/contacts" title="Contacts" data-toggle="collapse" data-target=".in">Contacts</a></li>
+      <li><a href="/#!/cms" title="CMS" data-toggle="collapse" data-target=".in">CMS</a></li>
+    </ul>
+  </div>
+</nav>
+<!--</header>-->
