--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>LuGo</title>
-    <!--<base href="/">-->
+    <base href="/">
 
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon"/>
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css">-->
@@ -24,7 +24,6 @@
     <ng-include src="'partials/navbar.html'"></ng-include>
 
     <main id="content" role="main">
-      <!--<ui-view></ui-view>-->
       <ng-view></ng-view>
     </main>
     
