--- a/public/templates/portfolio.html
+++ b/public/templates/portfolio.html
@@ -1,28 +1,8 @@
 <section id="portfolio">
   <div ng-repeat="project in projects">
-    <a href="/#!/projects/{{project.name}}" title="{{project.title}}">
-    <!--<a ui-sref="project(name: project.name)" title="{{project.title}}">-->
+    <a href="/projects/{{project.name}}" title="{{project.title}}">
       <img ng-src="/thumbnails/{{project.name}}.png" class="img-responsive" alt="" id="{{project.name}}" style="max-width:50px; max-height:50px;">
       <span>{{project.title}}</span>
     </a>
   </div>
 </section>
-
-<!--<section class="portfolio">
-<!- -<div class="row no-gutter">- ->
-<div class="row gutter-80">
-  <div class="col-xs-6 col-md-4 col-lg-3 gutter-80" ng-repeat="project in projects">
-    <a href="/#/projects/{{project.name}}" title="{{project.title}}" class="portfolio-box">
-      <img ng-src="/thumbnails/{{project.name}}.png" class="img-responsive" alt="" id="{{project.name}}">
-      <div class="portfolio-box-caption">
-        <div class="portfolio-box-caption-content">
-          <div class="project-category text-faded">
-            {{project.title}}
-          </div>
-          <!- -<div class="project-name">{{project.title}}</div>- ->
-        </div>
-      </div>
-    </a>
-  </div>
-</div>
-</section>-->
