--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon"/>
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css">-->
     <!-- <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'> -->
-     <!--<link rel="stylesheet" href="static/css/styles.css"> -->
+     <link rel="stylesheet" href="static/css/styles2.css"> 
     
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -18,9 +18,8 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <style>section {border:1px solid; margin-bottom:10px;} </style>
   </head>
-  <body ng-app="architectureportfolio">
+  <body ng-app="architecturePortfolio">
     <ng-include src="'partials/navbar.html'"></ng-include>
 
     <main id="content" role="main">
