--- a/public/templates/project.html
+++ b/public/templates/project.html
@@ -2,57 +2,57 @@
   <section class="project-info">
     <p ng-if='project.category'>
       <b>Category</b> 
-      {{project.category}}
+      {{ project.category }}
     </p>
     
     <p ng-if='project.address || project.city || project.country'>
       <b>Location</b>
-      {{project.address}} 
+      {{ project.address }}
       <span ng-if='project.address && (project.city || project.country)'> - </span>
-      {{project.city}} 
+      {{ project.city }}
       <span ng-if='project.city && project.country'> - </span>
-      {{project.country}}
+      {{ project.country }}
     </p>
       
     <p ng-if='project.startYear || project.endYear'>
       <b>Date</b>
-      {{project.startYear}}
+      {{ project.startYear | date : 'yyyy' }}
       <span ng-if='project.startYear && project.endYear'> - </span>
-      {{project.endYear}}
+      {{ project.endYear | date : 'yyyy' }}
     </p>
     
     <p ng-if='project.grossArea'>
       <b>Gross area</b>
-      {{project.grossArea}}
+      {{ project.grossArea | number }}
     </p>
     
     <p ng-if='project.floorArea'>
       <b>Floor area</b>
-      {{project.floorArea}}
+      {{ project.floorArea | number }}
     </p>
     
     <p ng-if='project.description'>
       <b>Description</b>
-      {{project.description}}
+      {{ project.description }}
     </p>
     
     <p ng-if='project.companyUrl'>
       <b>Company</b>
-      <a href="{{project.companyUrl}}" target="_blank" title="change this title">{{project.company}}</a>
+      <a href="{{ project.companyUrl}}" target="_blank" title="change this title">{{ project.company }}</a>
     </p>
     
     <p ng-if='project.participation'>
       <b>Participation</b>
-      {{project.participation}}
+      {{ project.participation }}
     </p>
   </section>
 
   <section class="project-main">
-    <h3>PROJECT : {{project.title}}</h3>
+    <h3>PROJECT : {{ project.title}}</h 3>
     <div ng-repeat="image in project.images">
       <figure>
-        <img ng-src="../static/images/portfolio/{{image.name}}.png" alt="{{image.name}}" title="{{image.name}}">
-        <figcaption>{{image.caption}}</figcaption>
+        <img ng-src="../static/images/portfolio/{{ image.name}}.png" alt="{{ image.name}}" title="{{ image.name}} ">
+        <figcaption>{{ image.caption}}</figcaptio n>
       <figure>
     </div>
   </section>
